[package]
name = "oasproxy"
version = "0.1.0"
authors = ["jcarres-mdsol <jcarres@mdsol.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies.oas_middleware]
path = "oas_middleware"

[dependencies.simple_proxy]
#version = "*"
path = "rs-simple-proxy"
features = ["health"]

[dependencies]
env_logger = "*"
serde = { version = "1.0", features = ["derive"] }
structopt = { version = "0.3" }
http = "0.2"

[profile.dev]
debug = 0
