[package]
name = "openapi_deref"
version = "0.1.1"
authors = ["Jordi Polo <mumismo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openapiv3 = "0.3.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
serde_yaml = "0.8"
log = "*"
