[package]
name = "openapi_utils"
version = "0.2.2"
authors = ["Jordi Polo <mumismo@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/jordipolo/oas_proxy"
homepage = "https://github.com/JordiPolo/oas_proxy/tree/master/openapi_utils"
documentation = "https://docs.rs/openapi_utils"

description = """
Extension method and utilities to work with OpenAPI 3.0 files
"""
keywords = ["openapi"]
autotests = false

exclude = [".cargo_vcs_info.json", ".gitignore"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openapiv3 = "0.5.0"
log = "0.4"
indexmap = "1.3.0"
http = "0.2"
